--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^6.6.0",
     "express": "^4.17.2",
     "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.15",
     "react-icons": "^4.3.1",
     "react-refresh": "^0.11.0",
     "style-loader": "^3.3.1",
